--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ li {
 	justify-content: center;
 	overflow-y: auto;
 	box-sizing: border-box;
+	position: relative;
 }
 
 #page .pages.none{
@@ -270,7 +271,9 @@ li {
 		transform: translateX(-100%);
 		position: absolute;
 		transition: all 1s ease;
+		height: 100vh;
 		z-index: 1;
+		padding-top: 3%;
 	}
 
 	#navigation.on{
@@ -285,7 +288,7 @@ li {
 		display: block;
 		position: absolute;
 		font-size: 2.2rem;
-		top: 22px;
+		top: 3.3%;
 		left: 10px;
 		z-index: 2;
 		transition: .2s;
