--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ li {
 
 #navigation .profile .border:hover{
 	background-color: white;
+	width: 176px;
 	color: black;
 	cursor: pointer;
 	text-align: center;
@@ -166,6 +167,7 @@ li {
 #navigation .profile .border a{
 	display: flex;
 	justify-content: left;
+	align-items: center;
 	padding: .56em .7em;
 	border-radius: 10px;
 	text-decoration: none;
@@ -179,6 +181,7 @@ li {
 #navigation .profile .border .icon{
    font-size: 1.9rem;
    line-height: 115%;
+   margin-right: 1rem;
 }
 
 #navigation .profile .border .profile_name{
